--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,27 +21,13 @@
   transition-property: width, left;
 }
 /* ============================= */
-.navbar__logo {
-  font-size: 1.6rem;
-}
+
 .navbar__items-wrapper {
   display: flex;
   align-items: center;
   list-style: none;
   padding-left: 0;
 }
-.navbar__items-wrapper button {
-  background-color: transparent;
-  border: none;
-  outline: none;
-}
-.navbar__btn:hover {
-  cursor: pointer;
-}
-#navbar-check {
-  display: none;
-}
-
 .hide {
   height: 0px !important;
 }
@@ -50,24 +36,9 @@
 }
 
 @media (max-width: 650px) {
-  .navbar__items-wrapper li {
-    margin-block: 0.8em;
-  }
-  .navbar__btn-wrapper label {
-    display: flex;
-    flex-direction: column;
-  }
-  .navbar__btn-wrapper label:hover {
-    cursor: pointer;
-  }
-  .navbar__btn-wrapper span {
-    display: block;
-    width: 25px;
-    height: 8px;
-    border-top: 3px solid #eee;
-  }
   .navbar__items-wrapper {
     flex-direction: column;
+    gap: 1.2em;
     justify-content: center;
     align-items: center;
     position: absolute;
@@ -80,4 +51,148 @@
     overflow: hidden;
     z-index: 5;
   }
+}
+/* ======================== */
+.loader {
+  width: 50px;
+  padding: 8px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: #242929;
+  --_m: conic-gradient(#0000 10%, #000), linear-gradient(#000 0 0) content-box;
+  -webkit-mask: var(--_m);
+  mask: var(--_m);
+  -webkit-mask-composite: source-out;
+  mask-composite: subtract;
+  animation: s3 1s infinite linear;
+}
+@keyframes s3 {
+  to {
+    transform: rotate(1turn);
+  }
+}
+/* .loading__wrapper {
+  background-color: #475569;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 0.4em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9;
+}
+
+.loading__wrapper .spinner {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #fff;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+.loading-button .spinner {
+  width: 20px;
+  height: 20px;
+  border: 3px solid #fff;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+} */
+/* ============================== */
+.slider {
+  position: relative;
+  width: 14rem;
+}
+.slider__track,
+.slider__range,
+.slider__left-value,
+.slider__right-value {
+  position: absolute;
+}
+.slider__track,
+.slider__range {
+  border-radius: 3px;
+  height: 5px;
+}
+.slider__track {
+  background-color: #ced4da;
+  width: 14rem;
+  z-index: 1;
+}
+.slider__range {
+  background-color: #fd5631;
+  z-index: 2;
+}
+.slider__left-value,
+.slider__right-value {
+  color: #dee2e6;
+  font-size: 12px;
+  margin-top: 20px;
+}
+.slider__left-value {
+  left: 6px;
+}
+.slider__right-value {
+  right: -4px;
+}
+/* Removing the default appearance */
+.thumb,
+.thumb::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  -webkit-tap-highlight-color: transparent;
+}
+.thumb {
+  pointer-events: none;
+  position: absolute;
+  height: 0;
+  width: 14rem;
+  outline: none;
+}
+.thumb--left {
+  z-index: 3;
+}
+.thumb--right {
+  z-index: 4;
+}
+/* For Chrome browsers */
+.thumb::-webkit-slider-thumb {
+  background-color: white;
+  border: 4px solid #fd5631;
+  border-radius: 50%;
+  cursor: pointer;
+  height: 18px;
+  width: 18px;
+  margin-top: 4px;
+  pointer-events: all;
+  position: relative;
+}
+/* For Firefox browsers */
+.thumb::-moz-range-thumb {
+  background-color: #f1f5f7;
+  border: none;
+  border-radius: 50%;
+  box-shadow: 0 0 1px 1px #ced4da;
+  cursor: pointer;
+  height: 18px;
+  width: 18px;
+  margin-top: 4px;
+  pointer-events: all;
+  position: relative;
 }
