--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -137,12 +137,12 @@
   z-index: 1;
 }
 .slider__range {
-  background-color: #fd5631;
+  background-color: #3b82f6;
   z-index: 2;
 }
 .slider__left-value,
 .slider__right-value {
-  color: #dee2e6;
+  color: #3b82f6;
   font-size: 12px;
   margin-top: 20px;
 }
@@ -174,7 +174,7 @@
 /* For Chrome browsers */
 .thumb::-webkit-slider-thumb {
   background-color: white;
-  border: 4px solid #fd5631;
+  border: 4px solid #3b82f6;
   border-radius: 50%;
   cursor: pointer;
   height: 18px;
