--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,74 +2,82 @@
 @tailwind components;
 @tailwind utilities;
 
+/* ******************** */
+.load {
+   @apply animate-pulse shadow-md;
+   /* @apply animate-pulse rounded-xl bg-primaryWhite shadow-md; */
+}
+/* ******************** */
+
 .navbar__btn:focus:after,
 .navbar__btn:hover:after {
-  width: 100%;
-  left: 0;
+   width: 100%;
+   left: 0;
 }
 .navbar__btn:after {
-  content: "";
-  pointer-events: none;
-  bottom: -2px;
-  left: 50%;
-  position: absolute;
-  width: 0;
-  height: 1px;
-  background-color: #ffffff;
-  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
-  transition-duration: 400ms;
-  transition-property: width, left;
+   content: '';
+   pointer-events: none;
+   bottom: -2px;
+   left: 50%;
+   position: absolute;
+   width: 0;
+   height: 1px;
+   background-color: #ffffff;
+   transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+   transition-duration: 400ms;
+   transition-property: width, left;
 }
 /* ============================= */
 
 .navbar__items-wrapper {
-  display: flex;
-  align-items: center;
-  list-style: none;
-  padding-left: 0;
+   display: flex;
+   align-items: center;
+   list-style: none;
+   padding-left: 0;
 }
 .hide {
-  height: 0px !important;
+   height: 0px !important;
 }
 .show {
-  height: 30vh !important;
+   height: 30vh !important;
 }
 
 @media (max-width: 650px) {
-  .navbar__items-wrapper {
-    flex-direction: column;
-    gap: 1.2em;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 48px;
-    left: 0;
-    width: 100%;
-    background: rgb(168 85 247);
-    height: 0;
-    transition: all 0.3s ease-in;
-    overflow: hidden;
-    z-index: 5;
-  }
+   .navbar__items-wrapper {
+      flex-direction: column;
+      gap: 1.2em;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      top: 48px;
+      left: 0;
+      width: 100%;
+      background: rgb(168 85 247);
+      height: 0;
+      transition: all 0.3s ease-in;
+      overflow: hidden;
+      z-index: 3;
+   }
 }
+
 /* ======================== */
 .loader {
-  width: 50px;
-  padding: 8px;
-  aspect-ratio: 1;
-  border-radius: 50%;
-  background: #242929;
-  --_m: conic-gradient(#0000 10%, #000), linear-gradient(#000 0 0) content-box;
-  -webkit-mask: var(--_m);
-  mask: var(--_m);
-  -webkit-mask-composite: source-out;
-  mask-composite: subtract;
-  animation: s3 1s infinite linear;
+   width: 50px;
+   padding: 8px;
+   aspect-ratio: 1;
+   border-radius: 50%;
+   background: #242929;
+   --_m: conic-gradient(#0000 10%, #000), linear-gradient(#000 0 0) content-box;
+   -webkit-mask: var(--_m);
+   mask: var(--_m);
+   -webkit-mask-composite: source-out;
+   mask-composite: subtract;
+   animation: s3 1s infinite linear;
 }
 @keyframes s3 {
-  to {
-    transform: rotate(1turn);
-  }
+   to {
+      transform: rotate(1turn);
+   }
 }
 /* .loading__wrapper {
   background-color: #475569;
@@ -117,82 +125,82 @@
 } */
 /* ============================== */
 .slider {
-  position: relative;
-  width: 14rem;
+   position: relative;
+   width: 14rem;
 }
 .slider__track,
 .slider__range,
 .slider__left-value,
 .slider__right-value {
-  position: absolute;
+   position: absolute;
 }
 .slider__track,
 .slider__range {
-  border-radius: 3px;
-  height: 5px;
+   border-radius: 3px;
+   height: 5px;
 }
 .slider__track {
-  background-color: #ced4da;
-  width: 14rem;
-  z-index: 1;
+   background-color: #ced4da;
+   width: 14rem;
+   z-index: 1;
 }
 .slider__range {
-  background-color: #3b82f6;
-  z-index: 2;
+   background-color: #3b82f6;
+   z-index: 2;
 }
 .slider__left-value,
 .slider__right-value {
-  color: #3b82f6;
-  font-size: 12px;
-  margin-top: 20px;
+   color: #3b82f6;
+   font-size: 12px;
+   margin-top: 20px;
 }
 .slider__left-value {
-  left: 6px;
+   left: 6px;
 }
 .slider__right-value {
-  right: -4px;
+   right: -4px;
 }
 /* Removing the default appearance */
 .thumb,
 .thumb::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  -webkit-tap-highlight-color: transparent;
+   -webkit-appearance: none;
+   -webkit-tap-highlight-color: transparent;
 }
 .thumb {
-  pointer-events: none;
-  position: absolute;
-  height: 0;
-  width: 14rem;
-  outline: none;
+   pointer-events: none;
+   position: absolute;
+   height: 0;
+   width: 14rem;
+   outline: none;
 }
 .thumb--left {
-  z-index: 3;
+   z-index: 3;
 }
 .thumb--right {
-  z-index: 4;
+   z-index: 4;
 }
 /* For Chrome browsers */
 .thumb::-webkit-slider-thumb {
-  background-color: white;
-  border: 4px solid #3b82f6;
-  border-radius: 50%;
-  cursor: pointer;
-  height: 18px;
-  width: 18px;
-  margin-top: 4px;
-  pointer-events: all;
-  position: relative;
+   background-color: white;
+   border: 4px solid #3b82f6;
+   border-radius: 50%;
+   cursor: pointer;
+   height: 18px;
+   width: 18px;
+   margin-top: 4px;
+   pointer-events: all;
+   position: relative;
 }
 /* For Firefox browsers */
 .thumb::-moz-range-thumb {
-  background-color: #f1f5f7;
-  border: none;
-  border-radius: 50%;
-  box-shadow: 0 0 1px 1px #ced4da;
-  cursor: pointer;
-  height: 18px;
-  width: 18px;
-  margin-top: 4px;
-  pointer-events: all;
-  position: relative;
+   background-color: #f1f5f7;
+   border: none;
+   border-radius: 50%;
+   box-shadow: 0 0 1px 1px #ced4da;
+   cursor: pointer;
+   height: 18px;
+   width: 18px;
+   margin-top: 4px;
+   pointer-events: all;
+   position: relative;
 }
