--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,16 @@
 @tailwind utilities;
 
 /* ******************** */
+/* img { */
+/* object-fit: cover;
+   width: 100%;
+   height: 850px; */
+/* display: block;
+   max-width: 2030px;
+   max-height: 815px;
+   width: auto;
+   height: auto; */
+/* } */
 .load {
    @apply animate-pulse shadow-md;
    /* @apply animate-pulse rounded-xl bg-primaryWhite shadow-md; */
@@ -35,58 +45,6 @@
 }
 /* ********page transition********* */
 
-.navbar__btn:focus:after,
-.navbar__btn:hover:after {
-   width: 100%;
-   left: 0;
-}
-.navbar__btn:after {
-   content: '';
-   pointer-events: none;
-   bottom: -2px;
-   left: 50%;
-   position: absolute;
-   width: 0;
-   height: 1px;
-   background-color: #ffffff;
-   transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
-   transition-duration: 400ms;
-   transition-property: width, left;
-}
-/* ============================= */
-
-.navbar__items-wrapper {
-   display: flex;
-   align-items: center;
-   list-style: none;
-   padding-left: 0;
-}
-.hide {
-   height: 0px !important;
-}
-.show {
-   height: 30vh !important;
-}
-
-@media (max-width: 650px) {
-   .navbar__items-wrapper {
-      flex-direction: column;
-      gap: 1.2em;
-      justify-content: center;
-      align-items: center;
-      position: absolute;
-      top: 48px;
-      left: 0;
-      width: 100%;
-      background: rgb(168 85 247);
-      height: 0;
-      transition: all 0.3s ease-in;
-      overflow: hidden;
-      z-index: 3;
-   }
-}
-
-/* ======================== */
 .loader {
    width: 50px;
    padding: 8px;
@@ -105,51 +63,8 @@
       transform: rotate(1turn);
    }
 }
-/* .loading__wrapper {
-  background-color: #475569;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  border-radius: 0.4em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 9;
-}
 
-.loading__wrapper .spinner {
-  width: 48px;
-  height: 48px;
-  border: 5px solid #fff;
-  border-bottom-color: transparent;
-  border-radius: 50%;
-  display: inline-block;
-  box-sizing: border-box;
-  animation: rotation 1s linear infinite;
-}
-
-.loading-button .spinner {
-  width: 20px;
-  height: 20px;
-  border: 3px solid #fff;
-  border-bottom-color: transparent;
-  border-radius: 50%;
-  display: inline-block;
-  box-sizing: border-box;
-  animation: rotation 1s linear infinite;
-}
-
-@keyframes rotation {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-} */
-/* ============================== */
+/* multirange slider */
 .slider {
    position: relative;
    width: 14rem;
@@ -186,6 +101,7 @@
 .slider__right-value {
    right: -4px;
 }
+
 /* Removing the default appearance */
 .thumb,
 .thumb::-webkit-slider-thumb {
