--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+option[value=''] {
+   background-color: red;
+}
+
 /* ******************** */
 /* img { */
 /* object-fit: cover;
