--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+   scroll-padding-top: 24px;
+}
 .load {
    @apply animate-pulse shadow-md;
 }
